<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item1_count"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/coffee1"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/item1_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/item_1"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item2_count"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/coffee2"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/item2_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/item_2"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item3_count"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/coffee3"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/item3_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/item_3"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:text="@string/coin_input_info"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:text="@string/available_funds"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_coin1"
            android:text="@string/coin_1"/>

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_coin2"
            android:text="@string/coin_2"/>

        <Button
            android:id="@+id/btn_coin3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/coin_3" />

        <TextView
            android:id="@+id/fund_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:text="@string/id_input_info"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/item_id" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_item1"
            android:text="@string/item_1_w_price"/>

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_item2"
            android:text="@string/item_2_w_price"/>

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_item3"
            android:text="@string/item_3_w_price"/>

        <TextView
            android:id="@+id/item_id_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorBlack"
            android:text="@string/reset"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_abort"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:background="@color/colorBlack"
            android:text="@string/abort"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@color/colorBlack"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="75dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_fund" />

            <TextView
                android:id="@+id/return_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/item_door"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/closed_door" />
    </LinearLayout>

</LinearLayout>