<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:id="@+id/id_view"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_id"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/purchase_id"
            android:gravity="center_horizontal"
            android:text="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/name_view"
        android:layout_toRightOf="@+id/id_view"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/item_name"
            android:text="Item1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:id="@+id/price_view"
        android:layout_toRightOf="@id/name_view"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/item_price"
            android:text="10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/quarter_view"
        android:layout_toRightOf="@id/price_view"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quarter"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/quarter_counter"
            android:text="10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/dime_view"
        android:layout_toRightOf="@id/quarter_view"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dime"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/dime_counter"
            android:text="10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/nickel_view"
        android:layout_toRightOf="@id/dime_view"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickel"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/nickel_counter"
            android:text="10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:id="@+id/received_view"
        android:layout_toRightOf="@id/nickel_view"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_received"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:id="@+id/total_received"
            android:text="10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:id="@+id/changes_view"
        android:layout_toRightOf="@id/received_view"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changes"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:id="@+id/changes"
            android:text="10"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignBottom="@id/price_view"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorBlack"/>

</RelativeLayout>